--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ click==8.1.8
 coloredlogs==15.0.1
 Flask==3.1.0
 flatbuffers==25.2.10
+gunicorn==23.0.0
 humanfriendly==10.0
 idna==3.10
 imageio==2.37.0
